--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <link rel="stylesheet" href="assets/css/componentes/cartao.css">
         <link rel="stylesheet" href="assets/css/componentes/item.css">
         <link rel="stylesheet" href="assets/css/como-conseguir.css">
+        <link rel="stylesheet" href="assets/css/componentes/produto.css">
+        <link rel="stylesheet" href="assets/css/ofertas.css">
+        <link rel="stylesheet" href="assets/css/componentes/video.css">
         <link rel="stylesheet" href="assets/css/componentes/rodape.css">
     </head>
     <body>
@@ -61,6 +64,93 @@
                         </li>
                     </ul>
                 </article>
+            </section>
+
+            <section class="container ofertas">
+                <h2 class="titulo alinhamento-meio">
+                    Conheça nossos
+                    <span class="titulo-destaque">produtos</span>
+                </h2>
+                <ul>
+                    <li class="produto">
+                        <img src="assets/img/produto-01.png" alt="Imagem do Produto" class="produto__imagem">
+                        <div class="produto__conteudo">
+                            <h3 class="produto__titulo titulo-destaque">Ajuga reptans</h3>
+                            <p class="produto__preco">R$ 20,00</p>
+                            <a href="" class="produto__comprar">Comprar<span class="produto__comprar--icone"></span></a>
+                        </div>
+                    </li>
+                    <li class="produto">
+                        <img src="assets/img/produto-02.png" alt="Imagem do Produto" class="produto__imagem">
+                        <div class="produto__conteudo">
+                            <h3 class="produto__titulo titulo-destaque">Cordyline fruticosa</h3>
+                            <p class="produto__preco">R$ 20,00</p>
+                            <a href="" class="produto__comprar">Comprar<span class="produto__comprar--icone"></span></a>
+                        </div>
+                    </li>
+                    <li class="produto">
+                        <img src="assets/img/produto-03.png" alt="Imagem do Produto" class="produto__imagem">
+                        <div class="produto__conteudo">
+                            <h3 class="produto__titulo titulo-destaque">Crassula ovata</h3>
+                            <p class="produto__preco">R$ 20,00</p>
+                            <a href="" class="produto__comprar">Comprar<span class="produto__comprar--icone"></span></a>
+                        </div>
+                    </li>
+                    <li class="produto">
+                        <img src="assets/img/produto-04.png" alt="Imagem do Produto" class="produto__imagem">
+                        <div class="produto__conteudo">
+                            <h3 class="produto__titulo titulo-destaque">Cyperus rotundus</h3>
+                            <p class="produto__preco">R$ 20,00</p>
+                            <a href="" class="produto__comprar">Comprar<span class="produto__comprar--icone"></span></a>
+                        </div>
+                    </li>
+                    <li class="produto">
+                        <img src="assets/img/produto-05.png" alt="Imagem do Produto" class="produto__imagem">
+                        <div class="produto__conteudo">
+                            <h3 class="produto__titulo titulo-destaque">Delairea odorata</h3>
+                            <p class="produto__preco">R$ 20,00</p>
+                            <a href="" class="produto__comprar">Comprar<span class="produto__comprar--icone"></span></a>
+                        </div>
+                    </li>
+                    <li class="produto">
+                        <img src="assets/img/produto-06.png" alt="Imagem do Produto" class="produto__imagem">
+                        <div class="produto__conteudo">
+                            <h3 class="produto__titulo titulo-destaque">Datura metel</h3>
+                            <p class="produto__preco">R$ 20,00</p>
+                            <a href="" class="produto__comprar">Comprar<span class="produto__comprar--icone"></span></a>
+                        </div>
+                    </li>
+                </ul>
+            </section>
+
+            <section class="container">
+                <h2 class="titulo alinhamento-meio">
+                    Veja aqui nossos
+                    <span class="titulo-destaque">vídeos</span>
+                </h2>
+
+                <ul>
+                    <li class="cartao-de-video container">
+                        <div class="cartao-de-video__video"><img src="https://picsum.photos/278/252" alt="Capa do video" class="cartao-de-video--imagem"></div>
+                        <h3 class="cartao-de-video--titulo">Vídeo XYZ</h3>
+                        <p>Publicado em março de 2019</p>
+                    </li>
+                    <li class="cartao-de-video container">
+                        <div class="cartao-de-video__video"><img src="https://picsum.photos/278/252" alt="Capa do video" class="cartao-de-video--imagem"></div>
+                        <h3 class="cartao-de-video--titulo">Vídeo XYZ</h3>
+                        <p>Publicado em março de 2019</p>
+                    </li>
+                    <li class="cartao-de-video container">
+                        <div class="cartao-de-video__video"><img src="https://picsum.photos/278/252" alt="Capa do video" class="cartao-de-video--imagem"></div>
+                        <h3 class="cartao-de-video--titulo">Vídeo XYZ</h3>
+                        <p>Publicado em março de 2019</p>
+                    </li>
+                    <li class="cartao-de-video container">
+                        <div class="cartao-de-video__video"><img src="https://picsum.photos/278/252" alt="Capa do video" class="cartao-de-video--imagem"></div>
+                        <h3 class="cartao-de-video--titulo">Vídeo XYZ</h3>
+                        <p>Publicado em março de 2019</p>
+                    </li>
+                </ul>
             </section>
          </main>
 
